2010-08-31  Philippe Normand  <pnormand@igalia.com>

Reviewed by Eric Carlson.

        [GStreamer] can't play m4v videos
        https://bugs.webkit.org/show_bug.cgi?id=44951

        Fixed registration of the m4v media type in the hashtable used by
        the player to report if it supports a given media type.

        Test: media/media-can-play-mpeg4-video.html

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache):

LayoutTests:

        Reviewed by Eric Carlson.

        [GStreamer] can't play m4v videos
        https://bugs.webkit.org/show_bug.cgi?id=44951

        Test similar to media-can-play-mpeg-audio.html but for videos. For
        now only m4v and mp4 types are tested.

        * media/media-can-play-mpeg4-video-expected.txt: Added.
        * media/media-can-play-mpeg4-video.html: Added.

Canonical link: https://commits.webkit.org/57405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66646 268f45cc-cd09-0410-ab3c-d52691b4dbfc